Error fixing on mobile devices
v0.125

- Joey585 :)

--- a/css/v2.css
+++ b/css/v2.css
@@ -1,4 +1,4 @@
-html {
+body {
   font-family: 'Montserrat', sans-serif;
   background: rgb(44,34,209);
   background: linear-gradient(90deg, rgba(44,34,209,1) 0%, rgba(19,19,224,1) 28%, rgba(9,56,213,1) 43%, rgba(19,94,241,1) 72%, rgba(0,212,255,1) 100%);
